Automatically backed up by Learn

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -11,7 +11,7 @@
     <form class="" action="/login" method="post">
       <p>Username: <input type="text" name="username" value=""></p>
       <p>Password: <input type="text" name="password" value=""></p>
-      <input type="submit" name="" value="Submit">
+      <input type="submit" name="" value="Log In">
     </form>
   </body>
 </html>
