--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -10,7 +10,7 @@
     <h3>Log In Please</h3>
     <form class="" action="/login" method="post">
       <p>Username: <input type="text" name="username" value=""></p>
-      <p>Password: <input type="text" name="password" value=""></p>
+      <p>Password: <input type="password" name="password" value=""></p>
       <input type="submit" name="" value="Log In">
     </form>
   </body>
