--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -9,8 +9,8 @@
     <h1>Welcome to FlatBank</h1>
     <h3>Log In Please</h3>
     <form class="" action="/login" method="post">
-      <p>Username: <input type="text" name="username" value=""></p>
-      <p>Password: <input type="password" name="password" value=""></p>
+      <p>Username: <input type="text" name="username" value="" required></p>
+      <p>Password: <input type="password" name="password" value="" required></p>
       <input type="submit" name="" value="Log In">
     </form>
   </body>
