--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="stylesheets/bootstrap.css" type="text/css">
   </head>
   <body id="page-top">
+    <% if Helper.log_in?%>
     <h1>Welcome <%= @user.username %></h1>
     <h3>Your Balance: <%= @user.balance %></h3>
     <a href="/logout">Log Out</a>
